--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 
-version: '2.2'
+version: '3.7'
 
 services:
 
@@ -13,25 +13,20 @@ services:
     read_only: true
     tmpfs: /tmp
     restart: 'no'
-    ports:
-      - 5028:5028
+    ports: [5028:5028]
 
   avatars-server:
     build:
       context: .
-      args:
-        - SHA
+      args: [SHA]
     image: cyberdojo/avatars
     container_name: test-avatars-server
     environment: [NO_PROMETHEUS]
-    ports:
-      - 5027:5027
+    ports: [5027:5027]
     init: true
     user: nobody
     read_only: true
     restart: 'no'
-    volumes:
-      - ./test_server:/app/test:ro
-    tmpfs:
-      - /tmp:exec,mode=1777 # Sticky bit must be set on /tmp otherwise
-                            # Dir.mktmpdir(id,'/tmp') complains
+    volumes: [ ./test_server:/app/test:ro ]
+    tmpfs: [ '/tmp:exec,mode=1777' ] # Sticky bit must be set on /tmp otherwise
+                                     # Dir.mktmpdir(id,'/tmp') complains
