--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,9 +2,9 @@ FROM cyberdojo/rack-base
 LABEL maintainer=jon@jaggersoft.com
 
 WORKDIR /app
-COPY . .
-RUN chown -R nobody:nogroup .
+COPY --chown=nobody:nogroup . .
 
 EXPOSE 5028
+
 USER nobody
 CMD [ "./up.sh" ]
