--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     read_only: true
     tmpfs: /tmp
     restart: 'no'
-    ports: [5028:5028]
+    ports: [ '5028:5028' ]
 
   avatars-server:
     build:
@@ -22,7 +22,7 @@ services:
     image: cyberdojo/avatars
     container_name: test-avatars-server
     environment: [NO_PROMETHEUS]
-    ports: [5027:5027]
+    ports: [ '5027:5027' ]
     init: true
     user: nobody
     read_only: true
