--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
     user: nobody
     read_only: true
     tmpfs: /tmp
-    restart: 'no'
-    ports: [ '5028:5028' ]
+    restart: "no"
+    ports: [ "5028:5028" ]
 
   avatars-server:
     build:
@@ -22,11 +22,11 @@ services:
     image: cyberdojo/avatars
     container_name: test-avatars-server
     environment: [NO_PROMETHEUS]
-    ports: [ '5027:5027' ]
+    ports: [ "5027:5027" ]
     init: true
     user: nobody
     read_only: true
-    restart: 'no'
-    volumes: [ ./test_server:/app/test:ro ]
-    tmpfs: [ '/tmp:exec,mode=1777' ] # Sticky bit must be set on /tmp otherwise
+    restart: "no"
+    volumes: [ "./test_server:/app/test:ro" ]
+    tmpfs: [ "/tmp:exec,mode=1777" ] # Sticky bit must be set on /tmp otherwise
                                      # Dir.mktmpdir(id,'/tmp') complains
