Add cpu requests/limits to k8s yaml file

--- a/.circleci/avatars-values.yaml
+++ b/.circleci/avatars-values.yaml
@@ -25,9 +25,11 @@ containers:
         mountPath: /tmp
         readOnly: false
     resources:
-      limits:
-        memory: 32Mi
       requests:
+        cpu: 50m
+        memory: 32Mi
+      limits:
+        cpu: 100m
         memory: 32Mi
     livenessProbe:
       path: /alive?
