Fix k8s deployment requires

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,4 +44,4 @@ workflows:
           requires: [ build-publish ]
       - deploy-to-prod:
           context: cyberdojo-context
-          requires: [ approve-to-prod ]
+          requires: [ deploy-to-beta ]
