In Dockerfiles, use tini as pid-1 process

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,4 +1,4 @@
-FROM cyberdojo/rack-base:bd4161e
+FROM cyberdojo/rack-base:2e387b6
 LABEL maintainer=jon@jaggersoft.com
 
 COPY --chown=nobody:nogroup . /app
@@ -9,4 +9,5 @@ ENV SHA=${COMMIT_SHA}
 EXPOSE 5027
 
 USER nobody
+ENTRYPOINT ["/sbin/tini", "-g", "--"]
 CMD [ "/app/up.sh" ]
