--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM cyberdojo/rack-base
+FROM cyberdojo/rack-base:2e387b6
 LABEL maintainer=jon@jaggersoft.com
 
 WORKDIR /app
@@ -7,4 +7,5 @@ COPY --chown=nobody:nogroup . .
 EXPOSE 5028
 
 USER nobody
+ENTRYPOINT ["/sbin/tini", "-g", "--"]
 CMD [ "./up.sh" ]
