--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,24 +4,24 @@ version: '3.7'
 services:
 
   avatars-client:
+    image: ${CYBER_DOJO_AVATARS_CLIENT_IMAGE}:${CYBER_DOJO_AVATARS_TAG}
     build:
       context: client
       args: [ CYBER_DOJO_AVATARS_CLIENT_PORT ]
-    image: cyberdojo/avatars-client
     container_name: test-avatars-client
     env_file:
       - .env
+    ports: [ "${CYBER_DOJO_AVATARS_CLIENT_PORT}:${CYBER_DOJO_AVATARS_CLIENT_PORT}" ]
     user: ${CYBER_DOJO_AVATARS_CLIENT_USER}
     read_only: true
     tmpfs: /tmp
     restart: "no"
-    ports: [ "${CYBER_DOJO_AVATARS_CLIENT_PORT}:${CYBER_DOJO_AVATARS_CLIENT_PORT}" ]
 
   avatars-server:
+    image: ${CYBER_DOJO_AVATARS_IMAGE}:${CYBER_DOJO_AVATARS_TAG}
     build:
       context: app
       args: [ COMMIT_SHA, CYBER_DOJO_AVATARS_PORT ]
-    image: ${CYBER_DOJO_AVATARS_IMAGE}
     container_name: test-avatars-server
     env_file:
       - .env
