--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,10 @@ jobs:
           command: |
             export AVATARS_COVERAGE=off
             export AVATARS_DEMO=off
+            # DOCKER_USER, DOCKER_PASS are in the context
+            echo "${DOCKER_PASS}" | docker login --username "${DOCKER_USER}" --password-stdin
             ./build_test_publish.sh
+            docker logout            
 
   deploy-to-beta:
     docker:
